--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Future Focused - Financial Literacy for Everyone</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdeliv    r.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <!-- Replace the broken CDN link -->
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <style>
         /* Slider Styles */
         .image-slider {
@@ -19,6 +20,113 @@
             width: 100%;
             height: 400px;
             object-fit: cover;
+        }
+        /* Team Section Styles */
+        .team-section {
+            padding: 80px 0;
+            background: linear-gradient(135deg, #1a365d 0%, #2b6cb0 100%);
+            color: white;
+        }
+
+        .team-title {
+            text-align: center;
+            margin-bottom: 15px;
+            color: white;
+            font-size: 2.5rem;
+            font-weight: 600;
+        }
+
+        .team-caption {
+            text-align: center;
+            margin-bottom: 50px;
+            color: rgba(255, 255, 255, 0.9);
+            font-size: 1.1rem;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .team-slider {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 0;
+        }
+
+        .team-slide {
+            padding: 0;
+        }
+
+        .team-member {
+            background: transparent;
+            box-shadow: none;
+        }
+
+        .team-member img {
+            width: 100%;
+            height: 600px;
+            object-fit: cover;
+            border-radius: 0;
+            margin-bottom: 0;
+        }
+
+        .team-member-info {
+            display: none;
+        }
+
+        /* Slick slider custom styles */
+        .slick-prev,
+        .slick-next {
+            width: 50px;
+            height: 50px;
+            z-index: 1;
+        }
+
+        .slick-prev {
+            left: -60px;
+        }
+
+        .slick-next {
+            right: -60px;
+        }
+        .slick-prev:before,
+        .slick-next:before {
+            color: #1a365d;
+            font-size: 20px;
+            line-height: 1;
+            opacity: 1;
+        }
+
+        .slick-prev {
+            left: -10px;
+        }
+
+        .slick-next {
+            right: -10px;
+        }
+
+        .slick-dots {
+            bottom: -40px;
+        }
+
+        .slick-dots li button:before {
+            font-size: 12px;
+            color: white;
+            opacity: 0.5;
+        }
+
+        .slick-dots li.slick-active button:before {
+            opacity: 1;
+            color: white;
+        }
+
+        @media (max-width: 768px) {
+            .team-slider {
+                padding: 0 20px;
+            }
+            
+            .team-member img {
+                height: 300px;
+            }
         }
     </style>
 </head>
@@ -141,7 +249,8 @@
             </div>
         </section>
 
-        <section class="impact-section">
+        <!-- Add ID to Impact section -->
+        <section id="impact" class="impact-section">
             <div class="impact-header">
                 <h2 class="impact-title">Our Impact</h2>
                 <p class="impact-subtitle">Through dedication and community partnership, we've created meaningful change in financial literacy across communities.</p>
@@ -261,13 +370,126 @@
             </div>
         </section>
 
+        <section class="event-gallery">
+            <div class="container">
+                <h2 class="text-center">Events in Action</h2>
+                <p class="lead text-center">See the impact we're making in our community through our engaging workshops and events.</p>
+                <div class="gallery-grid">
+                    <div class="gallery-item fade-in">
+                        <img src="images/IMG_8914.JPG" alt="Financial Workshop">
+                    </div>
+                    <div class="gallery-item fade-in">
+                        <img src="images/IMG_8918.JPG" alt="Community Event">
+                    </div>
+                    <div class="gallery-item fade-in">
+                        <img src="images/IMG_8922.JPG" alt="Youth Training">
+                    </div>
+                    <div class="gallery-item fade-in">
+                        <img src="images/IMG_8923.JPG" alt="Group Discussion">
+                    </div>
+                    <div class="gallery-item fade-in">
+                        <img src="images/IMG_8924.JPG" alt="Financial Education">
+                    </div>
+                    <div class="gallery-item fade-in">
+                        <img src="images/IMG_8931.JPG" alt="Community Workshop">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <style>
+            /* Event Gallery Styles */
+            .event-gallery {
+                padding: 80px 0;
+                background: #f8f9fa;
+            }
+        .gallery-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            margin-top: 40px;
+        }
+        .gallery-item {
+            position: relative;
+            overflow: hidden;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
+        .gallery-item:hover {
+            transform: translateY(-5px);
+        }
+        .gallery-item img {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+            display: block;
+            transition: transform 0.3s ease;
+        }
+        .gallery-item:hover img {
+            transform: scale(1.05);
+        }
+        @media (max-width: 992px) {
+            .gallery-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+        @media (max-width: 576px) {
+            .gallery-grid {
+                grid-template-columns: 1fr;
+            }
+            .gallery-item img {
+                height: 250px;
+            }
+        }
+    </style>
+            </div>
+        </section>
 
+        <section id="team" class="team-section">
+            <div class="container">
+                <h2 class="team-title">Meet the Team</h2>
+                <p class="team-caption">Get to know the passionate individuals behind our mission.</p>
+                <div class="team-slider">
+                    <div class="team-slide">
+                        <div class="team-member">
+                            <img src="images/futurefocus1.png" alt="Nick Laslo">
+                            <div class="team-member-info">
+                                <h3>Nick Laslo</h3>
+                                <p>Founder & Executive Director</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-slide">
+                        <div class="team-member">
+                            <img src="images/futurefocus2.png" alt="Team Member">
+                            <div class="team-member-info">
+                                <h3>Team Member</h3>
+                                <p>Program Director</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-slide">
+                        <div class="team-member">
+                            <img src="images/IMG_8932.JPG" alt="Team Member">
+                            <div class="team-member-info">
+                                <h3>Team Member</h3>
+                                <p>Financial Education Specialist</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-slide">
+                        <div class="team-member">
+                            <img src="images/IMG_8740.JPG" alt="Team Member">
+                            <div class="team-member-info">
+                                <h3>Team Member</h3>
+                                <p>Community Outreach Coordinator</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-
-
-
-
-        
         <section id="contact" class="contact-section">
             <div class="container">
                 <div class="contact-grid">
@@ -477,16 +699,55 @@
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
         $(document).ready(function(){
-            $('.image-slider').slick({
-                dots: true,
-                infinite: true,
-                speed: 500,
+            $('.team-slider').slick({
+                slidesToShow: 1,
+                slidesToScroll: 1,
                 autoplay: true,
-                autoplaySpeed: 3000,
+                autoplaySpeed: 4000,
+                dots: true,
+                arrows: true,
+                infinite: true,
+                speed: 700,
                 fade: true,
-                cssEase: 'linear'
+                cssEase: 'linear',
+                responsive: [
+                    {
+                        breakpoint: 768,
+                        settings: {
+                            arrows: false
+                        }
+                    }
+                ]
             });
         });
+    </script>
+    <script>
+        let currentSlide = 0;
+
+        function showSlide(index) {
+            const slides = document.querySelectorAll('.slide');
+            if (index >= slides.length) {
+                currentSlide = 0; // Loop back to the first slide
+            } else if (index < 0) {
+                currentSlide = slides.length - 1; // Loop back to the last slide
+            } else {
+                currentSlide = index;
+            }
+
+            slides.forEach((slide, i) => {
+                slide.classList.remove('active');
+                if (i === currentSlide) {
+                    slide.classList.add('active');
+                }
+            });
+        }
+
+        function changeSlide(direction) {
+            showSlide(currentSlide + direction);
+        }
+
+        // Show the first slide initially
+        showSlide(currentSlide);
     </script>
 </body>
 </html>
