Updated website with slider fixes and team section improvements

--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Add these lines for favicon and SEO -->
-    <link rel="icon" type="image/x-icon" href="images/453378063_2792624230892516_8429596864512086761_n.jpg">
-    <link rel="apple-touch-icon" href="images/453378063_2792624230892516_8429596864512086761_n.jpg">
-    <meta property="og:image" content="images/453378063_2792624230892516_8429596864512086761_n.jpg">
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Future Focused empowers communities through innovative financial education and literacy programs that create lasting impact.">
+    <meta name="keywords" content="financial literacy, youth education, community empowerment, financial education">
+    <meta name="robots" content="index, follow">
+    <!-- Favicon and Apple Touch Icons -->
+    <link rel="icon" type="image/x-icon" href="https://futurefocusedyouth.org/images/453378063_2792624230892516_8429596864512086761_n.jpg">
+    <link rel="apple-touch-icon" href="https://futurefocusedyouth.org/images/453378063_2792624230892516_8429596864512086761_n.jpg">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://futurefocusedyouth.org">
+    <meta property="og:image" content="https://futurefocusedyouth.org/images/453378063_2792624230892516_8429596864512086761_n.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:title" content="Future Focused - Financial Literacy for Everyone">
     <meta property="og:description" content="Building stronger communities through innovative financial education and literacy programs that create lasting impact.">
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://futurefocusedyouth.org/images/453378063_2792624230892516_8429596864512086761_n.jpg">
     <title>Future Focused - Financial Literacy for Everyone</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
