Add co-founder section and styling

--- a/index.html
+++ b/index.html
@@ -520,6 +520,95 @@
             </div>
             <img src="images/upscalemedia-transformed.png" alt="Nick Laslo - Founder of Future Focused Youth" class="founder-image">
         </section>
+
+        <section class="cofounder-section">
+            <div class="cofounder-container">
+                <div class="cofounder-image-wrapper">
+                    <img src="images/tm.jpg" alt="Co-Founder - Theo Moss" class="cofounder-image">
+                </div>
+                <div class="cofounder-content">
+                    <h2 class="cofounder-title">Recognizing Our Co-Founder</h2>
+                    <h3 class="cofounder-name">Theo Moss</h3>
+                    <p class="cofounder-role">Co-Founder & Director of Community Programs</p>
+                    <p class="cofounder-text">
+                        Theo Moss has been instrumental in shaping the vision and impact of Future Focused Youth. With a passion for community empowerment and a background in youth development, Theo has led the creation of innovative programs that reach and inspire young people across the city.
+                    </p>
+                    <p class="cofounder-text">
+                        Their dedication to financial literacy and inclusive education continues to drive our mission forward, ensuring every voice is heard and every opportunity is accessible.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <style>
+            /* Co-Founder Section Styles */
+            .cofounder-section {
+                background: linear-gradient(135deg, #f8fafc 0%, #e3eaf6 100%);
+                padding: 80px 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .cofounder-container {
+                display: flex;
+                align-items: center;
+                max-width: 1000px;
+                margin: 0 auto;
+                gap: 48px;
+                flex-wrap: wrap;
+            }
+            .cofounder-image-wrapper {
+                flex: 1 1 300px;
+                display: flex;
+                justify-content: center;
+            }
+            .cofounder-image {
+                width: 280px;
+                height: 340px;
+                object-fit: cover;
+                border-radius: 16px;
+                box-shadow: 0 6px 24px rgba(26,54,93,0.12);
+                background: #fff;
+            }
+            .cofounder-content {
+                flex: 2 1 400px;
+                color: #1a365d;
+            }
+            .cofounder-title {
+                font-family: 'Poppins', sans-serif;
+                font-size: 2.2rem;
+                font-weight: 700;
+                margin-bottom: 0.5rem;
+                color: #2b6cb0;
+            }
+            .cofounder-name {
+                font-size: 1.5rem;
+                font-weight: 600;
+                margin-bottom: 0.25rem;
+                color: #1a365d;
+            }
+            .cofounder-role {
+                font-size: 1.1rem;
+                color: #4299e1;
+                margin-bottom: 1rem;
+            }
+            .cofounder-text {
+                font-family: 'Inter', sans-serif;
+                font-size: 1.05rem;
+                color: #4a5568;
+                margin-bottom: 0.75rem;
+            }
+            @media (max-width: 900px) {
+                .cofounder-container {
+                    flex-direction: column;
+                    gap: 32px;
+                    text-align: center;
+                }
+                .cofounder-content {
+                    align-items: center;
+                }
+            }
+        </style>
     </main>
 
         <section id="contact" class="contact-section">
