--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- SEO Meta Tags -->
     <meta name="description" content="Future Focused empowers communities through innovative financial education and literacy programs that create lasting impact.">
     <meta name="keywords" content="financial literacy, youth education, community empowerment, financial education">
@@ -144,6 +144,96 @@
             
             .team-member img {
                 height: 300px;
+            }
+        }
+
+        /* Responsive Design Improvements */
+        @media screen and (max-width: 768px) {
+            /* Header/Navigation */
+            .nav-links {
+                position: fixed;
+                top: var(--header-height);
+                left: 0;
+                width: 100%;
+                background: var(--background);
+                padding: 1rem;
+                flex-direction: column;
+                transform: translateY(-100%);
+                transition: transform 0.3s ease;
+            }
+
+            .nav-links.active {
+                transform: translateY(0);
+            }
+
+            /* Hero Section */
+            .hero-content {
+                padding: 2rem 1rem;
+            }
+
+            .hero-content h1 {
+                font-size: 2rem;
+            }
+
+            .hero-buttons {
+                flex-direction: column;
+                gap: 1rem;
+            }
+
+            /* Team Section */
+            .team-slider {
+                padding: 0 1rem;
+            }
+
+            .team-member img {
+                height: 300px;
+            }
+
+            /* Founder/Co-founder Sections */
+            .founder-section,
+            .cofounder-section {
+                padding: 2rem 1rem;
+            }
+
+            .founder-content,
+            .cofounder-content {
+                padding: 1rem;
+            }
+
+            .founder-image,
+            .cofounder-image {
+                width: 100%;
+                max-width: 300px;
+                height: auto;
+            }
+
+            /* Contact Section */
+            .contact-grid {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
+            .contact-form {
+                padding: 1rem;
+            }
+        }
+
+        /* iPhone-specific improvements */
+        @media screen and (max-width: 375px) {
+            :root {
+                --header-height: 60px;
+            }
+
+            .hero-content h1 {
+                font-size: 1.75rem;
+            }
+
+            .lead {
+                font-size: 1rem;
+            }
+
+            .team-member img {
+                height: 250px;
             }
         }
     </style>
@@ -857,6 +947,43 @@
 
         // Show the first slide initially
         showSlide(currentSlide);
+    </script>
+    <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        // Handle touch events for mobile menu
+        const menuToggle = document.querySelector('.menu-toggle');
+        const navLinks = document.querySelector('.nav-links');
+
+        menuToggle.addEventListener('touchstart', function(e) {
+            e.preventDefault();
+            this.classList.toggle('active');
+            navLinks.classList.toggle('active');
+        });
+
+        // Close menu when clicking outside
+        document.addEventListener('touchstart', function(e) {
+            if (!menuToggle.contains(e.target) && !navLinks.contains(e.target)) {
+                menuToggle.classList.remove('active');
+                navLinks.classList.remove('active');
+            }
+        });
+
+        // Smooth scroll for mobile
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('touchstart', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                    menuToggle.classList.remove('active');
+                    navLinks.classList.remove('active');
+                }
+            });
+        });
+    });
     </script>
 </body>
 </html>
