fix: update image extension to lowercase for case-sensitive systems

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
         <section class="cofounder-section">
             <div class="cofounder-container">
                 <div class="cofounder-image-wrapper">
-                    <img src="images/theom2.JPG" alt="Co-Founder - Theo Moss" class="cofounder-image">
+                    <img src="images/theom2.jpg" alt="Co-Founder - Theo Moss" class="cofounder-image">
                 </div>
                 <div class="cofounder-content">
                     <h2 class="cofounder-title">Recognizing Our Co-Founder</h2>
